fix immutable map modification for action ordering